Make CRUD // Dashboard

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,10 +17,10 @@
         <div class="top-bar margin-bottom-2" id="example-menu">
             <div class="top-bar-left">
                 <ul class="vertical medium-horizontal menu" data-dropdown-menu>
-                    <li class="menu-text">@UniLP CrM</li>
-                    <li><a href="{{ path('contact_index') }}">Contact</a></li>
-                    <li><a href="{{ path('opportunity_index') }}">Opportunité</a></li>
-                    <li><a href="{{ path('product_index') }}">Produit</a></li>
+                    <li class="menu-text"><a href="{{ path('app_dashboard') }}">@UniLP CrM</a></li>
+                    <li><a href="{{ path('app_contact_index') }}">Contact</a></li>
+                    <li><a href="{{ path('app_opportunity_index') }}">Opportunité</a></li>
+                    <li><a href="{{ path('app_product_index') }}">Produit</a></li>
                 </ul>
             </div>
         </div>
