--- a/templates/opportunity/show.html.twig
+++ b/templates/opportunity/show.html.twig
@@ -21,7 +21,7 @@
             </tr>
             <tr>
                 <th>Status</th>
-                <td>{{ opportunity.status }}</td>
+                <td>{{ opportunity.status.value }}</td>
             </tr>
         </tbody>
     </table>
